<?xml version="1.0" encoding="utf-8"?>
<resources>
	<!-- Generic App String Information (predominantly for splash screen) -->
    <string name="app_name">Scene Fiend</string>
	<string name="app_desc">The Ultimate Quiz Game for Film Fiends!</string>
    <string name="app_version_info">Version 1.0.0\nCopyright © 2012 Silke Stienen-Durand\n All Rights Reserved</string>
    
    <!-- Title screens -->
    <string name="help">Help Me!</string>
    <string name="splash">Splash</string>
    <string name="settings">Settings</string>
    <string name="game">Game</string>
    <string name="menu">Main Menu</string>
    <string name="scores">Scores</string>
    <string name="scoresMenu">Score Menu</string>
    <string name="login_menu">Login Menu</string>
    <string name="register">Join Us</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="gameover">Game Over</string>
    <string name="gamestringover">You Just Scored</string>
    <string name="twitter_callback">http://www.scenefiend.silkesd.com/</string>
    
    <!-- Menu Strings -->
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_play">Play</string>
    <string name="menu_item_scores">Scores</string>
    <string name="menu_item_help">Help Me!</string>
    <string name="menu_item_login">Login</string>
    
    <!--  Scores Screen Strings-->
    <string name="all_scores">"All Scores"</string>
    <string name="my_scores">"My Scores"</string>
    <string name="high_scores">"High Scores"</string>
    <string name="no_scores">"No Scores Can Be Shown Here"</string>
    <string name="username">"Username"</string>
    <string name="fiend">"Fiend of the Day"</string>
    <string name="rank">"Rank"</string>
    <string name="score">"Score"</string>
    <string name="wait_msg">"Retrieving Scores&#8230;"</string>
    <string name="wait_title">"Loading&#8230;"</string>
    <string name="goBack">Go Back To Menu</string>
    <string name="playerHeader">Player</string>
    <string name="scoreHeader">Score</string>
    <string name="dateHeader">Date</string>
    
    <!-- Login Menu Strings -->
    <string name="login_item_scenefiendlogin">Login</string>
    <string name="login_item_twitterlogin">Twitter Login</string>
    <string name="login_item_register">Register</string>
    
    <!-- Register Strings-->
    <string name="register_username">Username:</string>
    <string name="register_email">Email:</string>
    <string name="register_button_pwd">Set Password</string>
    <string name="register_password">Password:</string>
    <string name="linkToLogin">Already regisetred. Go to Login!</string>
    <string name="registerText">Register</string>
    
    <string name="login_password2">Password (again):</string>
    <string name="login_pwd_set">Password Set</string>
    <string name="login_pwd_not_set">No Password Set</string>
    <string name="login_pwd_not_equal">Passwords do not match, please try again.</string>
    <string name="login_pwd_equal">Passwords match.</string>
    <string name="set_password_string">Set Password</string>
    
    <!-- Login Strings-->
    <string name="login_username">Username:</string>
    <string name="login_email">Email:</string>
    <string name="login_button_pwd">Set Password</string>
    <string name="login_password">Password:</string>
    <string name="linkToReg">I don\'t have an account. Register Me!</string>
    
    
    <!-- Twitter Login and Registration Strings-->
    <string name="twitter_email">Email</string>
    <string name="twitter_password">Password</string>
    <string name="twitter_login">Login</string>
    <string name="tweet">Tweet</string>
    <string name="tweetMyScore">Tweet My Score!</string>
    <string name="twitter_register_link">New to Twitter? Register here</string>
    <string name="twitter_login_link">Already have an account? Login here!</string>
    <string name="twitter_register">Register New Account</string>
    <string name="twitter_register_password">Password</string>
    <string name="twitter_register_email">Email</string>
    <string name="twitter_register_full_name">Full Name</string>

    <string name="next">I don\'t know! Move to next question</string>
   
</resources>