<?xml version="1.0" encoding="utf-8"?>
<ScrollView
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:fillViewport="true">
  <RelativeLayout 
  		android:layout_width="fill_parent"
  		android:layout_height="wrap_content" android:background="#000">
  		
  		<!--  Header  Starts-->
  		<LinearLayout android:id="@+id/header"
  				android:layout_width="fill_parent"
  				android:layout_height="wrap_content"
  				android:paddingTop="5dip"
  				android:paddingBottom="5dip">
  				
  		    <!-- logo starts -->
  				<ImageView
  		        android:layout_width="wrap_content"
  		        android:layout_height="match_parent"
  		        android:layout_gravity="center_horizontal"
  		        android:layout_marginLeft="10dip"
  		        android:layout_weight="0.30"
  		        android:src="@drawable/twitter_logo" />
  				<!-- Logo Ends -->
  		</LinearLayout>
  		<!--  Header Ends -->
  		 		
  		<!-- Registration Form -->
		<LinearLayout
		  xmlns:android="http://schemas.android.com/apk/res/android"
		  android:orientation="vertical"
		  android:layout_width="match_parent"
		  android:layout_height="wrap_content"
		  android:padding="10dip"
		  android:background="@drawable/bkgrnd_clear"
		  android:layout_below="@id/header">
		  
		  <!-- Full Name Label -->
		  <TextView android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textColor="#fff"
		  		android:text="@string/twitter_register_full_name"/>
		  <EditText android:id="@+id/reg_fullname" 
		  		android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:layout_marginTop="5dip"
		  		android:singleLine="true"
		  		android:layout_marginBottom="20dip"/>
		  
		  <!--  Email Label -->
		  <TextView android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textColor="#fff"
		  		android:text="@string/twitter_register_email"/>
		  <EditText android:id="@+id/reg_email" 
		  		android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:layout_marginTop="5dip"
		  		android:singleLine="true"
		  		android:layout_marginBottom="20dip"/>
		  
		  <!-- Password Label -->
		  <TextView android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:textColor="#fff"
		  		android:text="@string/twitter_register_password"/>
		  <EditText android:id="@+id/reg_password" 
		        android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:password="true"
		  		android:singleLine="true"
		  		android:layout_marginTop="5dip"/>
		  
		  <!-- Register Button -->		
		  <Button android:id="@+id/btnRegister" 
		  		android:layout_width="fill_parent"
		  		android:layout_height="wrap_content"
		  		android:layout_marginTop="10dip"
		  		android:text="@string/twitter_register"/>
		  <!-- Link to Login Screen -->

		  <TextView
		      android:id="@+id/link_to_login"
		      android:layout_width="fill_parent"
		      android:layout_height="wrap_content"
		      android:layout_marginBottom="40dip"
		      android:layout_marginTop="40dip"
		      android:gravity="center"
		      android:text="@string/twitter_login_link"
		      android:textColor="#fff"
		      android:textSize="18dip" />
		  
		  <Button
            android:id="@+id/btnBack"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:layout_weight="0.37"
            android:background="@null"
            android:text="@string/goBack"
            android:textColor="#fff"
            android:textStyle="bold" />
		    
		</LinearLayout>
  		<!-- Registration Form Ends -->
  		
  		
  </RelativeLayout>
</ScrollView>
