<?xml version="1.0" encoding="utf-8"?>
<!-- Main layout box -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/black"
    android:orientation="vertical" >

    <!-- The title text area -->
    <TextView 
    		android:text="@string/app_name" 
    		android:id="@+id/CustomFont"
    		android:layout_height="wrap_content" 
    		android:layout_width="fill_parent"
    		android:gravity="top|center"
    		android:textSize="@dimen/title_size"
    		android:textColor="@color/title_color">
    </TextView>
    
    <!-- the description below the title -->
    <TextView 
    		android:text="@string/app_desc" 
    		android:id="@+id/TextViewTopTitleDesc"
    		android:layout_height="wrap_content" 
    		android:layout_width="fill_parent"
    		android:gravity="top|center"
    		android:textSize="@dimen/desc_size"
    		android:textColor="@color/logo_color">
    </TextView>
    
    <!-- the frame containing the image for the splash screen -->
	<FrameLayout 
			android:layout_height="wrap_content" 
			android:layout_width="fill_parent" 
			android:id="@+id/frameLayout1">  	

    	<ImageView
    	    android:id="@+id/imageView1"
    	    android:layout_width="match_parent"
    	    android:layout_height="337dp"
    	    android:src="@drawable/splash" >

    	</ImageView>
	</FrameLayout>
	
	<!-- the version text below the image on the splash screen -->

	<TextView
	    android:id="@+id/TextViewBottomVersion"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:gravity="center"
	    android:lineSpacingExtra="@dimen/version_spacing"
	    android:text="@string/app_version_info"
	    android:textColor="@color/version_color"
	    android:textSize="@dimen/version_size" />

</LinearLayout>