<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bkgrnd_clear">
	
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="10dip" >
		<!-- title -->

        <TextView
            android:id="@+id/CustomFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.26"
            android:shadowColor="@android:color/white"
            android:shadowDx="0"
            android:shadowDy="0"
            android:shadowRadius="10"
            android:text="@string/login"
            android:textColor="@color/title_color"
            android:textSize="@dimen/screen_title_size" />
		
        <!-- Username Label -->

        <TextView
            android:id="@+id/TextView_Nickname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/login_username"
            android:textColor="@color/title_color"
            android:textSize="@dimen/help_text_size"
            android:textStyle="bold" />

        <!-- Username TextField -->

        <EditText
            android:id="@+id/loginUsername"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <!-- Password Label -->

        <TextView
            android:id="@+id/TextView_Password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/login_password"
            android:textColor="@color/title_color"
            android:textSize="@dimen/help_text_size"
            android:textStyle="bold" />
        
        <!-- Password TextField -->

        <EditText
            android:id="@+id/loginPassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:password="true" />

        <!-- Error message -->

        <TextView
            android:id="@+id/login_error"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:padding="10dip"
            android:textColor="#fff"
            android:textStyle="bold" />

        <!-- Login Button -->

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:layout_weight="0.45"
            android:text="@string/login" />

        <!-- Link to Registration Screen -->

        <Button
            android:id="@+id/btnLinkToRegisterScreen"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dip"
            android:layout_weight="0.37"
            android:background="@null"
            android:text="@string/linkToReg"
            android:textColor="#fff"
            android:textStyle="bold" />

    </LinearLayout>

</ScrollView>
           